# gerencia-estoque

./: .dev-env  .gitignore  Dockerfile  README.MD  docker-compose.yaml  pyproject.toml  server.py
app/api/: main.py
app/api/v1/endpoints/: conversation.py
app/core/: logger.py
app/core/graph_config/: WarehouseGraphService.toml  __init__.py
app/core/i18n/: PT_br.json  __init__.py
app/core/middlewares/utils/: logging_time_request.py
app/domain/models/: warehouse_domain.py
app/domain/services/: langgraph_warehouse_tools.py
app/exceptions/: config_invalid_database.py  provider_not_found.py  sql_injection.py
app/infrastructure/database/: session.py
app/infrastructure/database/repositories/: execute_queries.py
app/infrastructure/external_services/: langgraph_warehouse.py
app/schemas/request/: base_request.py  user_message.py
app/schemas/response/: base_response.py  conversation_response.py
app/utils/: Utils.py
migrations/app/postgree/: V001_CREATE_INITIAL_SCHEMA.sql
migrations/langfuse/: create_database.sh
